<resources>
    <string name="app_name">Scholar Helper</string>
    <!-- Strings related to com.gseven.studentplanner.login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="welcome">"Welcome "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="remaining_courses">Remaining Courses</string>
    <string name="courses">Courses</string>
    <string name="units">Units</string>
    <string name="new_course">New Course</string>
    <string name="all_courses">All Courses</string>

    <!-- Strings used for goal tracker -->
    <string name="title_activity_goal_tracker">GoalTrackerActivity</string>
    <string name="goal_tracker">Goal Tracker</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_edit_goal">EditGoalActivity</string>
</resources>